Make the sync range configurable

This adds a UI to select whether or not the user
wants to limit the sync range to lower the load
on the server, and its value.

BUG: 339449